<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/door"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/vhod"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/acount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/acount_register"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/account_email"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounder_for"
            android:padding="16sp"
            android:hint="@string/email"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/account_password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounder_for"
            android:padding="16sp"
            android:hint="@string/password"
            android:textColorHint="@color/grey" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/grey"
            android:text="@string/come"
            android:textSize="20sp"
            app:cornerRadius="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/click"
                android:textColor="@color/brown" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>